* Added support for Apple Pay