@@ -3,7 +3,7 @@
     <policies>
         <policy id="script-src">
             <values>
-                <value id="cardknox-ifields-script" type="host">https://cdn.cardknox.com/ifields/2.15.2211.1401/ifields.min.js</value>
+                <value id="cardknox-ifields-script" type="host">https://cdn.cardknox.com/ifields/2.15.2302.0801/ifields.min.js</value>
                 <value id="fue-source" type="host">*.googleapis.com</value>
                 <value id="google-source" type="host">*.google.com</value>
                 <value id="gstatic-source" type="host">*.gstatic.com</value>
