@@ -7,7 +7,7 @@
                             class="gp" 
                             data-ifields-id="igp" 
                             afterRender="initFrame()" 
-                            src="https://cdn.cardknox.com/ifields/2.15.2211.1401/igp.htm"
+                            src="https://cdn.cardknox.com/ifields/2.15.2302.0801/igp.htm"
                             allowpaymentrequest
                             sandbox="allow-popups allow-modals allow-scripts allow-same-origin allow-forms allow-popups-to-escape-sandbox allow-top-navigation"
                             title="GPay checkout page">
